--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="gameBoardContainer"></div>
+  </body>
 </html>
