--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="gameBoardContainer"></div>
+    <div id="playerContainer">
+      <input type="text" id="player1" placeholder="Player 1 Name" />
+      <input type="text" id="player2" placeholder="Player 2 Name" />
+      <button id="start-button">Start Game</button>
+    </div>
+    <div id="boardContainer"></div>
   </body>
 </html>
