--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
   </head>
   <body>
     <div id="playerContainer">
-      <input type="text" id="player1" placeholder="Player 1 Name" />
-      <input type="text" id="player2" placeholder="Player 2 Name" />
-      <button id="start-button">Start Game</button>
+      <fieldset id="fieldContainer">
+        <input type="text" id="player1" placeholder="Player 1 Name" />
+        <input type="text" id="player2" placeholder="Player 2 Name" />
+        <button id="start-button">Start Game</button>
+      </fieldset>
     </div>
     <div id="boardContainer"></div>
+    <div id="winnerDisplay"></div>
   </body>
 </html>
