Fix styling of elements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <button id="start-button">Start Game</button>
       </fieldset>
     </div>
+    <h2 id="playerTurn"></h2>
     <div id="boardContainer"></div>
-    <div id="winnerDisplay"></div>
+    <h1 id="winnerDisplay"></h1>
   </body>
 </html>
